SERVER-58293 Propagate apiVersion through mongocryptd explain command

GitOrigin-RevId: 58f9003307b0108f72e650b1f210d8a05ef71b60